--- a/clients.html
+++ b/clients.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>URK</title>
+    <title>УкрКонсалтинг</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header class="header">
         <div class="header__wrapper">
             <nav class="header-nav">
-                <a href="#" class="header-logo">LOGO</a>
+                <a href="#" class="header-logo">
+                    <img src="./img/logo.png" alt="УкрКонсалтинг">
+                </a>
                 <button class="header-burger"><span></span></button>
                 <ul class="header__list">
                     <li class="header__item drop-item">
@@ -502,7 +504,7 @@
                     <form action="#" class="clints-callback__form">
                         <label class="input_wrapper">
                             <span class="input-caption">Введите ваш E-mail и мы свяжемся с вами</span>
-                            <input type="text" class="main_input js-input" placeholder="Харьковская область">
+                            <input type="email" class="main_input js-input" placeholder="E-mail">
                         </label>
                         <button class="main_button-color js-button-decor">
                                 <span class="text">ПРИСОЕДИНИТЬСЯ</span>
