--- a/e-mail-one-event.html
+++ b/e-mail-one-event.html
@@ -17,7 +17,7 @@
             }
             
             .info-about-event {
-                width: 50% !important;
+                width: 100% !important;
                 padding-left: 0px !important;
                 border: none !important;
             }
@@ -38,6 +38,9 @@
             .social-item a {
                 width: 40% !important;
             }
+            .main-noty b {
+                padding: 20px !important;
+            }
         }
     </style>
 </head>
@@ -46,19 +49,27 @@
         <tr>
             <td style="font: 16px Arial,sans-serif; line-height: 24px; color: #3C4153; padding: 0px 0px 40px;">
                 <span style=" display:inline-block; vertical-align: middle;  text-align: center;">
-                    <img border="0" width="172" height="20" style="max-width:172px; max-height: 20px; display: inline-block;" src="./email-img/logo.png" alt="УкрКонсалтинг">
+                    <a href="#" target="_blank" style="display: block;">
+                        <img border="0" width="172" height="20" style="max-width:172px; max-height: 20px; display: inline-block;" src="./email-img/logo.png" alt="УкрКонсалтинг">
+                    </a>
                 </span>
                 <span style="display: inline-block; -webkit-text-size-adjust:none; font-size: 16px; margin: 0px; line-height: 21px; padding-top: 10px;">Повышение квалификации персонала, консалтинг,
                 корпоративное обучение, общие лекции и тренинги, информационно-технологические разработки</span>
             </td>
         </tr>
         <tr>
-            <td style="font: 16px Arial,sans-serif; line-height: 24px; color: #3C4153; padding-bottom: 50px;">
-                <span class="main-info-img" style=" display:inline-block; vertical-align: middle;  text-align: center; padding-right: 20px;">
-                    <img border="0" width="56" height="56" style="max-width:56px; max-height: 56px; display: inline-block; border-radius: 50%; overflow: hidden;" src="./email-img/reviews-img-1.png" alt="УкрКонсалтинг">
-                    <span style="display:block; -webkit-text-size-adjust:none; font-size: 14px; margin: 0px; line-height: 20px;">Анна</span>
-                </span>
-                <span style="display: inline-block; -webkit-text-size-adjust:none; font-size: 16px; margin: 0px; line-height: 22px; padding: 30px; background: #F0F0FA;box-shadow: 0px 0px 8px rgba(60, 65, 83, 0.2);border-radius: 30px 30px 30px 0px; width: 71%;"><b>Здравствуйте. Приглашаем Вас на курсы по экологии в Одессе. Ждем всех смельчаков</b></span>
+            <td style="Margin: 0;margin: 0; padding-bottom: 50px;">
+                <table class="event-table" border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; width: 100%;">
+                    <tr>
+                        <td style="Margin: 0;margin: 0; padding-right: 20px; text-align: center;" width="15%">
+                            <img border="0" width="56" height="56" style="max-width:56px; max-height: 56px; display: inline-block; border-radius: 50%; overflow: hidden;" src="./email-img/reviews-img-1.png" alt="УкрКонсалтинг">
+                            <span style="display:block; -webkit-text-size-adjust:none; font-size: 14px; margin: 0px; line-height: 20px;">Анна</span>
+                        </td>
+                        <td style="Margin: 0;margin: 0;" width="85%">
+                            <span class="main-noty" style="display: inline-block; -webkit-text-size-adjust:none; font-size: 16px; margin: 0px; line-height: 22px; background: #F0F0FA;box-shadow: 0px 0px 8px rgba(60, 65, 83, 0.2);border-radius: 30px 30px 30px 0px;"><b style="display: inline-block; padding: 30px; white-space: normal;">Здравствуйте. Приглашаем Вас на курсы по экологии в Одессе. Ждем всех смельчаков</b></span>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
         <tr>
@@ -68,7 +79,7 @@
         </tr>
         <tr>
             <td style="Margin: 0;margin: 0;">
-                <img border="0" width="100%" height="120" style="max-width:100%; max-height: 120; display: inline-block; object-fit: cover;" src="./email-img/photo.png" alt="УкрКонсалтинг" >
+                <img border="0" width="100%" height="120" style="max-width:100%; max-height: 120px; display: inline-block; object-fit: cover;" src="./email-img/photo.png" alt="УкрКонсалтинг" >
             </td>
         </tr>
         <tr>
@@ -329,12 +340,18 @@
             </td>
         </tr>
         <tr>
-            <td style="font: 16px Arial,sans-serif; line-height: 24px; color: #3C4153; padding-bottom: 50px; padding-top: 30px;">
-                <span class="main-info-img" style=" display:inline-block; vertical-align: middle;  text-align: center; padding-right: 20px;">
-                    <img border="0" width="56" height="56" style="max-width:56px; max-height: 56px; display: inline-block; border-radius: 50%; overflow: hidden;" src="./email-img/reviews-img-1.png" alt="УкрКонсалтинг">
-                    <span style="display:block; -webkit-text-size-adjust:none; font-size: 14px; margin: 0px; line-height: 20px;">Анна</span>
-                </span>
-                <span style="display: inline-block; -webkit-text-size-adjust:none; font-size: 16px; margin: 0px; line-height: 22px; padding: 30px; background: #F0F0FA;box-shadow: 0px 0px 8px rgba(60, 65, 83, 0.2);border-radius: 30px 30px 30px 0px; width: 71%;"><b>Записывайтель на семинар при помощи формы на <a href="#" target="_blank" style=" color: #0009F7; text-decoration: none;"> сайте</a> или по контактам указанным ниже</b></span>
+            <td style="Margin: 0;margin: 0; padding-bottom: 20px; padding-bottom: 50px; padding-top: 30px;">
+                <table class="event-table" border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; width: 100%;">
+                    <tr>
+                        <td style="Margin: 0;margin: 0; padding-right: 20px; text-align: center;" width="15%">
+                            <img border="0" width="56" height="56" style="max-width:56px; max-height: 56px; display: inline-block; border-radius: 50%; overflow: hidden;" src="./email-img/reviews-img-1.png" alt="УкрКонсалтинг">
+                            <span style="display:block; -webkit-text-size-adjust:none; font-size: 14px; margin: 0px; line-height: 20px;">Анна</span>
+                        </td>
+                        <td style="Margin: 0;margin: 0;" width="85%">
+                            <span class="main-noty" style="display: inline-block; -webkit-text-size-adjust:none; font-size: 16px; margin: 0px; line-height: 22px; background: #F0F0FA;box-shadow: 0px 0px 8px rgba(60, 65, 83, 0.2);border-radius: 30px 30px 30px 0px;"><b style="display: inline-block; padding: 30px; white-space: normal;">Записывайтель на семинар при помощи формы на <a href="#" target="_blank" style=" color: #0009F7; text-decoration: none;"> сайте</a> или по контактам указанным ниже</b></span>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
         <tr>
