--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             width: 0px;
             height: 0px;
         }
+        .preloader img {
+            width: 250px;
+        }
     </style>
      <script>
         window.onload = function() {
