--- a/corporate-events.html
+++ b/corporate-events.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="background-decor">
+        <div class="background-decor__inner"></div>
+    </div>
     <div id="app">
         <header class="header">
             <div class="header__wrapper">
