--- a/page-quiz.html
+++ b/page-quiz.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="background-decor">
+        <div class="background-decor__inner"></div>
+    </div>
     <header class="header">
         <div class="header__wrapper">
             <nav class="header-nav">
