--- a/index.html
+++ b/index.html
@@ -1560,33 +1560,33 @@
         <div class="popup-gallery__wrapper">
             <button class="slider-button prev js-image-button-prev disabled"><span class="icon-slider-arrow-left"></span></button>
             <button class="slider-button next js-image-button-next"><span class="icon-slider-arrow-right"></span></button>
-            <div class="popup-gallery__header">
-                <h3 class="popup-gallery__name">Консультационный семинар для специалистов планово-экономической службы “Актуальная тематика”</h3>
-                <h5 class="popup-gallery__city">г. Харьков</h5>
+            <div class="popup-gallery__header js-gallery-info-container">
+                <h3 class="popup-gallery__name js-gallery-name"></h3>
+                <h5 class="popup-gallery__city js-gallery-city"></h5>
             </div>
             <div class="popup-gallery__general-img js-general-image">
                 <img src="./img/announcements-img-1.png" alt="Фото">
             </div>
             <ul class="popup-gallery__img-list product-page__img-list">
-                <li class="popup-gallery__img-item js-image active" data-index="1">
+                <li class="popup-gallery__img-item js-image active" data-index="1" data-name="Консультационный семинар для специалистов планово-экономической службы “Актуальная тематика" data-city="г.Харьков">
                     <img src="./img/announcements-img-1.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="2">
+                <li class="popup-gallery__img-item js-image" data-index="2" data-name="Семинар2" data-city="г.Киев">
                     <img src="./img/announcements-img-2.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="3">
+                <li class="popup-gallery__img-item js-image" data-index="3" data-name="Семинар3" data-city="г.Сумы">
                     <img src="./img/announcements-img-3.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="4">
+                <li class="popup-gallery__img-item js-image" data-index="4" data-name="Семинар4" data-city="г.Львов">
                     <img src="./img/announcements-img-4.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="5">
+                <li class="popup-gallery__img-item js-image" data-index="5" data-name="Семинар5" data-city="г.Днепр">
                     <img src="./img/photo-gallery-img-1.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="6">
+                <li class="popup-gallery__img-item js-image" data-index="6" data-name="Семинар6" data-city="г.Черкаси">
                     <img src="./img/announcements-img-3.png" alt="Фото">
                 </li>
-                <li class="popup-gallery__img-item js-image" data-index="7">
+                <li class="popup-gallery__img-item js-image" data-index="7" data-name="Семинар7" data-city="г.Ужгород">
                     <img src="./img/announcements-img-4.png" alt="Фото">
                 </li>
             </ul>
